# protocol-template-library

./: CMakeLists.txt  README.rst  protocol_helper.hpp  ptl.hpp
examples/: CMakeLists.txt  mpeg2_ts.cpp  test.cpp
include/: ptl.hpp
